Fixed z-index on operator dropdown

--- a/src/jcsdl.css
+++ b/src/jcsdl.css
@@ -1568,7 +1568,7 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  z-index: 10;
+  z-index: 150;
   border: 1px solid gainsboro;
   border-top: 0;
   font-size: 13px;
